<resources>
    <string name="app_name">SCOMA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- menu drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_smart_energy">Solar Tracker</string>
    <string name="menu_smart_light">Lampu Pintar</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <!-- smart energy - manual -->
    <string name="manual_title">Manual</string>
    <string name="btn_cw_title">Clockwise</string>
    <string name="btn_ccw_title">Counter Clockwise</string>

    <!-- smart energy - auto -->
    <string name="auto_title">Otomatis</string>

    <string name="servo_angle_title">Sudut Servo:</string>
    <string name="solar_current_title">Arus Panel Surya</string>
    <string name="solar_voltage_title">Tegangan Panel Surya</string>
    <string name="accu_voltage_title">Tegangan Accu</string>
    <string name="zero">0</string>
    <string name="voltage">Volt</string>
    <string name="current">Ampere</string>

    <!-- Smart Light -->
    <string name="light_off_title1">Lampu 1 Padam</string>
    <string name="light_on_title1">Lampu 1 Menyala</string>
    <string name="light_off_title2">Lampu 2 Padam</string>
    <string name="light_on_title2">Lampu 2 Menyala</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>

    <!--  buat preference key  -->
    <string name="pref_is_login_key">pref_is_login</string>
    <string name="pref_user_fullname_key">pref_user_full_name</string>
    <string name="pref_user_email_key">pref_user_email_name</string>
    <string name="pref_user_image_url">pref_user_img_url</string>
    <string name="sudut_servo">Sudut Servo</string>
    <string name="azimuth">Azimuth</string>
    <string name="enter">Enter</string>
    <string name="masukkan_angka">Masukkan Angka</string>
    <string name="data_confirm">Data belum sampai ke NodeMCU</string>
    <string name="data_confirm_success">Data telah terkirim</string>
    <string name="sumber_listrik_ac">Sumber Listrik AC</string>
    <string name="watt">Watt</string>
    <string name="terakhir_update">Terakhir Update</string>
    <string name="pref_uid_key">prefUID</string>
    <string name="gmail">zulfifachrurrozi@gmail.com</string>
    <string name="password">********</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="guide">Hal-hal berikut yang perlu dilakukan secara berkala oleh pengguna :\n\n
    \t1. Menjaga Panel Surya Tetap Bersih\n
    \t2. Gunakan Air untuk membersihkan panel surya\n
    \t3. Gunakan sikat dari bahan halus\n
    \t4. Menyeka panel surya saat masih basah\n
    \t5. Lakukan pada pagi atau sore hari\n
    \t6. Memonitor kinerja sistem panel surya</string>
    <string name="sentence_with_new_line_tag">This is the first sentence\nThis is the second scentence\nThis is the third sentence</string>
    <string name="this_aplication">
        \t\tSCOMA adalah aplikasi yang bertujuan untuk Kontrol dan Pemantauan Solar Tracker
        guna memudahkan pengguna dalam pemantauan dan pengambilan keputusan kapanpun dan dimanapun mereka berada.\n
    </string>
    <string name="version">Version 1.0.0</string>
    <string name="purpose">
        \t\tAplikasi ini dibuat guna menyelesaikan Proyek Akhir kelompok yang beranggotakan:
        \n\t1. Alfiana Cendani Putri, \n\t2. Bowo Mahatma, \n\t3. Gilang Alif Prihadi, dan \n\t4. Zulfi Fachrurrozi.\n\n
        \t\tAplikasi ini masih dapat dikembangkan menjadi lebih baik kedepannya.
    </string>
    <string name="welcome_to_smart_city">Welcome to SCOMA</string>
    <string name="scoma">SCOMA</string>
</resources>