<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment"
    android:background="@color/white"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:text="@string/welcome_to_smart_city"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/sc2"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_menu_smart_energy"
            android:text="@string/menu_smart_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_menu_smart_light"
            android:text="@string/menu_smart_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</LinearLayout>