<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <include
        layout="@layout/pie_chart"
        android:id="@+id/chart_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/accu_voltage_title" />

            <TextView
                style="@style/TextSpec.Value"
                android:id="@+id/tv_accu_voltage"
                android:text="@string/zero"/>

            <TextView
                style="@style/TextSpec.Value"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/current" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/solar_voltage_title" />

            <TextView
                style="@style/TextSpec.Value"
                android:id="@+id/tv_solar_voltage"
                android:text="@string/zero" />

            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/voltage"
                android:gravity="start" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/solar_current_title" />

            <TextView
                android:id="@+id/tv_solar_current"
                android:text="@string/zero"
                style="@style/TextSpec.Value"/>

            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/voltage"
                android:gravity="start"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/azimuth" />

            <TextView
                style="@style/TextSpec.Value"
                android:id="@+id/tv_azimuth"
                android:text="@string/zero" />

            <TextView
                style="@style/TextSpec.Value"
                android:text=""
                android:gravity="start" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/sudut_servo" />

            <TextView
                style="@style/TextSpec.Value"
                android:id="@+id/tv_servo"
                android:text="@string/zero" />

            <TextView
                style="@style/TextSpec.Value"
                android:text=""
                android:gravity="start" />
        </TableRow>

    </TableLayout>

<!--    <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="12dp">-->

<!--            <TextView-->
<!--                android:text="@string/accu_voltage_title"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:text="@string/titik_dua"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_accu_voltage"-->
<!--                android:text=""-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="12dp">-->

<!--            <TextView-->
<!--                android:text="@string/solar_voltage_title"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:text="@string/titik_dua"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_solar_voltage"-->
<!--                android:text=""-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:text="@string/solar_current_title"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:text="@string/titik_dua"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_solar_current"-->
<!--                android:text=""-->
<!--                android:textSize="18sp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </TableRow>-->

</LinearLayout>